--- a/brat7066-details.html
+++ b/brat7066-details.html
@@ -87,8 +87,9 @@
               <h2>15 Segment Display Board</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  This is a circuit board I designed for a class project that continuously displays the first four letters of my last name along with the last four letters of my 
-                  student ID <i>(BRAT7066)</i>. The circuit was designed using <i>National Instruments MulitSim</i> and the board was designed using <i>AutoCAD Eagle</i>. No code is involved at all!
+                  This is a circuit board I designed for a class project that continuously displays the first four letters of my last name along 
+                  with the last four letters of my student ID <i>(BRAT7066)</i>. The circuit was designed using <i>National Instruments 
+                  MulitSim</i> and the board was designed using <i>AutoCAD Eagle</i>. No code is involved at all.
                 </p>
               </div>
             </div>
