--- a/dicetower-details.html
+++ b/dicetower-details.html
@@ -91,9 +91,10 @@
               <h2>Dice Tower</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  <i>Dungeons & Dragons</i> is a fanstasy role playing game I occasionally play with friends that involves rolling dice. I wanted to come up with a fun way to carry my dice to 
-                  game nights so I designed this dice tower. The box has a small drawer capable of holding two sets of dice and the top removes and connects with a magnet to offer a tower to 
-                  roll your dice! This box was 3D printed with PLA filament on a FDM printer. You can download the models <a href="https://www.thingiverse.com/thing:3751554">here!</a>
+                  <i>Dungeons & Dragons</i> is a fanstasy role playing game I occasionally play with friends that involves rolling dice. I wanted to 
+                  come up with a fun way to carry my dice to game nights so I designed this dice tower. The box has a small drawer capable of holding 
+                  two sets of dice and the top removes and connects with a magnet to offer a tower to roll your dice! This box was 3D printed with 
+                  PLA filament on a FDM printer. You can download the models <a href="https://www.thingiverse.com/thing:3751554">here.</a>
                 </p>
               </div>
             </div>
