--- a/mask-details.html
+++ b/mask-details.html
@@ -87,9 +87,11 @@
               <h2>Halloween Mask</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  This is one of my very first electronics projects I took on as an adult. The mask is a <i>Mad Max</i> themed voice changer I made for Halloween while in graduate school.
-                  The mask uses two arduinos, one to control the lights and one to control the voice changer. The voice changer uses a WAV shield to alter your voice based on a 
-                  potentiometer (high or low). The inspiration came from this <a href="https://learn.adafruit.com/wave-shield-voice-changer/overview">Adafruit</a> project.
+                  This is one of my very first electronics projects I took on as an adult. The mask is a <i>Mad Max</i> themed voice 
+                  changer I made for Halloween while in graduate school. The mask uses two arduinos, one to control the lights and one 
+                  to control the voice changer. The voice changer uses a WAV shield to alter your voice based on a potentiometer 
+                  (high or low). The inspiration came from this <a href="https://learn.adafruit.com/wave-shield-voice-changer/overview">
+                    Adafruit</a> project.
                 </p>
               </div>
             </div>
