--- a/mixtape-details.html
+++ b/mixtape-details.html
@@ -84,13 +84,14 @@
               <h2>Mixtape</h2>
               <div style="height:250px; overflow:auto;">
               <p class="indent">
-                Mixtape is a fully immerisive, interactive art experience in Oklahoma City, OK. Before opening in 2019, I volunteered at Factory Obscura to help with lighting and construction. 
-                During my time as a volunteer, I did a little of everything! From helping demolish and renovate the interior, to working with the carpenter to frame the exhibit, to soldering 
-                electronics, I did it all! 
+                Mixtape is a fully immerisive, interactive art experience in Oklahoma City, OK. Before opening in 2019, I volunteered at Factory 
+                Obscura to help with lighting and construction. During my time as a volunteer, I did a little of everything. From helping demolish
+                 and renovate the interior, to working with the carpenter to frame the exhibit, to soldering electronics. I did it all! 
               </p>
               <p class="indent">
-                My largest contribution was the wiring for the lights in the exhibit. Mixtape is filled with thousands of neopixel lights throughout each art installation! Additionally, I helped Factory Obscura with an interactive
-                piece that was in collaboration with <a href="http://www.meowwolf.com">Meow Wolf!</a>
+                My largest contribution was the wiring for the lights in the exhibit. Mixtape is filled with thousands of neopixel lights throughout 
+                each art installation! Additionally, I helped Factory Obscura with an interactive piece that was in collaboration with 
+                <a href="http://www.meowwolf.com">Meow Wolf.</a>
               </p>  
               </div>
             </div>
