--- a/orrery-details.html
+++ b/orrery-details.html
@@ -87,9 +87,10 @@
               <h2>Orrery</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  As a science fiction nerd, I love anything and everything about space. This orrery is a 3D printed, mechanized model of our solar system. The design was made by 
-                  <a href="https://www.instructables.com/Solar-System-Orrery-3D-Printed/">dragonator</a> and modified to incorporate two pulse wave modulators to dim the sun and slow 
-                  the speed of the orbit. The gear ratios are designed to closely resemble to actual orbits of each planet.
+                  As a science fiction nerd, I love anything and everything about space. This orrery is a 3D printed, mechanized model of our solar 
+                  system. The design was made by <a href="https://www.instructables.com/Solar-System-Orrery-3D-Printed/">dragonator</a> and modified 
+                  to incorporate two pulse wave modulators to dim the sun and slow the speed of the orbit. The gear ratios are designed to closely 
+                  resemble to actual orbits of each planet.
                 </p>
               </div>
             </div>
