--- a/starrealms-details.html
+++ b/starrealms-details.html
@@ -83,9 +83,10 @@
               <h2>Card Game Box</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  Card games have become a large part of my social life. On weekends, I like to meet up with friends and play a wide variety of games and what better way to show off to 
-                  you friends than to make your own custom card carrying case! This box is 3D printed use PLA on an FDM printer. The lid is also held in place with magnets. 
-                  You can download the models <a href="https://www.thingiverse.com/thing:3751479">here!</a>
+                  Card games have become a large part of my social life. On weekends, I like to meet up with friends and play a wide variety of games 
+                  and what better way to show off to your friends than to make your own custom card carrying case? This box is 3D printed use PLA 
+                  on an FDM printer. The lid is also held in place with magnets. You can download the models 
+                  <a href="https://www.thingiverse.com/thing:3751479">here.</a>
                 </p>
               </div>
             </div>
