--- a/switchbox-details.html
+++ b/switchbox-details.html
@@ -79,9 +79,10 @@
               <h2>Binary Switch Box Puzzle</h2>
               <diV>
                 <p class="indent">
-                  This is the first major puzzle you will encounter when solving the area 51 themed escape room at Clue Quest (Edmond, OK). A fuel orb for a spaceship hidden underground is locked
-                  behind a glass window and can only be retrieved if you know the proper switch combination. Players must learn about the scientist that built this box and his expertise in
-                  programming in order to gain access as the solution is in binary!
+                  This is the first major puzzle you will encounter when solving the area 51 themed escape room at Clue Quest (Edmond, OK). A fuel 
+                  orb for a spaceship hidden underground is locked behind a glass window and can only be retrieved if you know the proper switch 
+                  combination. Players must learn about the scientist that built this box and his expertise in programming in order to gain access 
+                  as the solution is in binary.
                 </p>
               </diV>
             </div>
