--- a/videogame-details.html
+++ b/videogame-details.html
@@ -83,9 +83,9 @@
               <h2>Portable Video Game Player</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  After purchasing my first 3D printer, I wanted to take on a project that incorporated 3D printing, soldering, and programming. I discovered this 
-                  <a href="https://learn.adafruit.com/pigrrl-zero">Adafruit</a> walkthrough that was the perfect combination of all three! The case is 3D printed PLA, the buttons are 3D 
-                  printed TPU, and the emulator runs on a RaspberryPi.
+                  After purchasing my first 3D printer, I wanted to take on a project that incorporated 3D printing, soldering, and programming. I 
+                  discovered this <a href="https://learn.adafruit.com/pigrrl-zero">Adafruit</a> walkthrough that was the perfect combination of 
+                  all three! The case is 3D printed PLA, the buttons are 3D printed TPU, and the emulator runs on a RaspberryPi.
                 </p>
               </div>
             </div>
