--- a/wildthings-details.html
+++ b/wildthings-details.html
@@ -75,8 +75,9 @@
               <h2>Night-Light</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  These are laser etched pieces of veneer that make excellent bookmarks! As gifts for friends and family, I like to take photos of their pets, deconstruct them into layered
-                  images of 3 colors, and etch each layer one at a time using the Glowforge. The result is a beautiful bookmark that your loved ones will cherish!
+                  These are laser etched pieces of veneer that make excellent bookmarks! As gifts for friends and family, I like to take photos of 
+                  their pets, deconstruct them into layered images of 3 colors, and etch each layer one at a time using the Glowforge. The result 
+                  is a beautiful bookmark that your loved ones will cherish.
                 </p>
               </div>
             </div>
