--- a/hologram-details.html
+++ b/hologram-details.html
@@ -103,14 +103,16 @@
               <h2>Alien  Spaceship  Puzzle</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  This is the grand finale puzzle I designed for the Area 51 themed escape room at Clue Quest (Edmond, OK). Players must collect enough fuel orbs throughout the room to power up
-                  the ship and open the door. Once the players have collected enough fuel orbs, the ship will power up enough to turn on the console and activate the holograms. There
-                  are six holograms (3 front and 3 back) that prompt the user for commands.
+                  This is the grand finale puzzle I designed for the Area 51 themed escape room at Clue Quest (Edmond, OK). Players must collect 
+                  enough fuel orbs throughout the room to power up the ship and open the door. Once the players have collected enough fuel orbs, 
+                  the ship will power up enough to turn on the console and activate the holograms. There are six holograms (3 front and 3 back) 
+                  that prompt the user for commands.
                 </p>
                 <p class="indent">
-                  Five ultrasonic sensors on the console are used to select the correct symbols and progress the game. The player waves their hand over the sensor at a certain height to select
-                  a certain symbol (the aliens control their technology through telekenesis). Once solved, a platform raises to reveal the final fuel orb. Players get to experience a final system 
-                  overload before the door slowly opens and they can make their escape!
+                  Five ultrasonic sensors on the console are used to select the correct symbols and progress the game. The player waves their hand 
+                  over the sensor at a certain height to select a certain symbol (the aliens control their technology through telekenesis). Once 
+                  solved, a platform raises to reveal the final fuel orb. Players get to experience a final system overload before the door slowly 
+                  opens and they can make their escape.
                 </p>
               </div>
             </div>
