--- a/index.html
+++ b/index.html
@@ -128,19 +128,34 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h2>
            <p class="indent">       
-            I am a creative individual with a passion for learning, creating, and collaborating. I grew up in a small town in Kentucky and from a very young age I realized I liked to build gizmos and gadgets. The addiction started with making cities out of <i>Legos</i> and soon progressed to building walking machines, automatic light switches, and soda dispensers out of <i>K’nex</i>. Eventually, I graduated to disassembling and repurposing electronics and my bedroom began to resemble a junkyard.
+            I am a creative individual with a passion for learning, creating, and collaborating. I grew up in a small town in Kentucky and from a 
+            very young age I realized I liked to build gizmos and gadgets. The addiction started with making cities out of <i>Legos</i> and soon 
+            progressed to building walking machines, automatic light switches, and soda dispensers out of <i>K’nex</i>. Eventually, I graduated to 
+            disassembling and repurposing electronics and my bedroom began to resemble a junkyard.
           </p>
            <p class="indent">
-            When I was in middle school, my father taught me to help rebuild classic cars and told me that if I wanted to have nice things when I got older, I should learn to build them myself. That stuck with me for a long time and to this day it is still something I draw inspiration from; frequently stopping to ask, “How can I build this myself?”. In high-school I discovered that I also had a strong passion for scientific research so when I began college, I had a hard time picking just one topic to study.
+            When I was in middle school, my father taught me to help rebuild classic cars and told me that if I wanted to have nice things when I 
+            got older, I should learn to build them myself. That stuck with me for a long time and to this day it is still something I draw 
+            inspiration from; frequently stopping to ask, “How can I build this myself?”. In high-school I discovered that I also had a strong 
+            passion for scientific research so when I began college, I had a hard time picking just one topic to study.
            </p>
            <p class="indent">
-            I began my studies focused on chemistry but mid-way through, I learned the overlap between chemistry and geology and made the leap to geochemistry. I mean what sciences are more encapsulating that learning how the entire planet works? A task I felt confident I could do. Upon receiving my bachelors degree, I proceeded to attend graduate school furthering my research into geochemistry and along the way got to see some of the most beautiful parts of the country (geologically speaking).
+            I began my studies focused on chemistry but mid-way through, I learned the overlap between chemistry and geology and made the leap to 
+            geochemistry. I mean what sciences are more encapsulating that learning how the entire planet works? A task I felt confident I could do. 
+            Upon receiving my bachelors degree, I proceeded to attend graduate school furthering my research into geochemistry and along the way 
+            got to see some of the most beautiful parts of the country (geologically speaking).
            </p>
            <p class="indent">
-            My first job out of graduate school was working in a research laboratory building experimental setups to study fluid-flow in oil and gas reservoirs. During my time constructing these high-pressure flow systems, I saw plenty of opportunities to teach myself something new. I learned to program using <i>Python</i> so that I could compile data faster. I learned to make automated pressure systems using <i>LabVIEW</i>. I begin learning more about circuitry and quickly realized that electricity and pressure behave in very similar ways.
+            My first job out of graduate school was working in a research laboratory building experimental setups to study fluid-flow in oil and 
+            gas reservoirs. During my time constructing these high-pressure flow systems, I saw plenty of opportunities to teach myself something 
+            new. I learned to program using <i>Python</i> so that I could compile data faster. I learned to make automated pressure systems using 
+            <i>LabVIEW</i>. I begin learning more about circuitry and quickly realized that electricity and pressure behave in very similar ways.
            </p>
            <p class="indent">
-            Eventually, I decided I wanted to follow my interests even further and enrolled in a computer engineering program at the <i>University of Oklahoma</i>. As I am working through my classes, my passion for electronics is growing each year. My hobbies have always been aligned with creating and learning and so too will be my career. My current interests are PCB design and embedded systems development but I am always going wherever my creativity takes me.
+            Eventually, I decided I wanted to follow my interests even further and enrolled in a computer engineering program at the 
+            <i>University of Oklahoma</i>. As I am working through my classes, my passion for electronics is growing each year. My hobbies have 
+            always been aligned with creating and learning and so too will be my career. My current interests are PCB design and embedded systems 
+            development but I am always going wherever my creativity takes me.
            </p>
             </h2>
           </div>
@@ -203,8 +218,8 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Percentages represent my confidence level. Zero percent would mean I have never used the tool, 100% would mean I consider myself proficient with little left to learn. I may never 
-            achieve 100% because there's always more to learn!</p>
+          <p>Percentages represent my confidence level. Zero percent would mean I have never used the tool, 100% would mean I consider myself 
+            proficient with little left to learn.</p>
         </div>
 
         <div class="row skills-content">
@@ -226,9 +241,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Java<i class="val">50%</i></span>
+              <span class="skill">Java<i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -237,9 +252,9 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">70%</i></span>
+              <span class="skill">Python <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -270,8 +285,8 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Welcome to the portfolio section of my website! Here you'll find pictures of programs I've created, electronics I've built, and things I've done. Click a project to see more 
-            details.</p>
+          <p>Welcome to the portfolio section of my website! Here you'll find pictures of programs I've created, electronics I've built, and 
+            things I've done. Click a project to see more details.</p>
         </div>
 
         <div class="row">
@@ -520,7 +535,8 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Welcome to the resume section of my website. Below you can read about my skills and professional experience. If you'd like to download a copy of my resume, you can do so by 
+          <p>Welcome to the resume section of my website. Below you can read about my skills and professional experience. If you'd like to 
+            download a copy of my resume, you can do so by 
             clicking <a href="assets/Jordan Clay Bratcher Resume_2022.pdf" download="Jordan Clay Bratcher's Resume">here.</a></p>
         </div>
 
@@ -529,7 +545,9 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Jordan Clay Bratcher</h4>
-              <p><em>Innovative and driven scientist/engineer and creator for over 11 years! I have experience with research, 3D design, electronic prototyping, programming, and more. My passion lies in creating solutions for scientific challenges and designing tools for regular use in research.
+              <p><em>Innovative and driven scientist/engineer and creator for over 11 years! I have experience with research, 3D design, 
+                electronic prototyping, programming, and more. My passion lies in creating solutions for scientific challenges and designing 
+                tools for regular use in research.
               </em></p>
               <ul>
                 <li>Oklahoma City, Ok 73107</li>
