--- a/synth-details.html
+++ b/synth-details.html
@@ -91,8 +91,9 @@
               <h2>Modular Synthesizer</h2>
               <div style="height: 250px; overflow: auto;">
                 <p class="indent">
-                  This is a modular synthesizer case that I laser cut from cherrywood and engraved. I designed each engraving to display some element of a cyber-punk theme. Additionally, I 
-                  cut and engraved several UV sensitive acrylic panels to cover any empty slots once a module is removed. Each size panel is etched with it's own animal!
+                  This is a modular synthesizer case that I laser cut from cherrywood and engraved. I designed each engraving to display some 
+                  element of a cyber-punk theme. Additionally, I cut and engraved several UV sensitive acrylic panels to cover any empty slots 
+                  once a module is removed. Each size panel is etched with it's own animal.
                 </p>
 
               </div>
