--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Scientist II, Special Core Analysis</h4>
+              <h4>Staff Scientist, Special Core Analysis</h4>
               <h5>2019 - Present</h5>
               <p><em>Chesapeake Energy, Oklahoma City, OK </em></p>
               <ul>
