--- a/index.html
+++ b/index.html
@@ -524,6 +524,19 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-electronics filter-3d_printing filter-programming">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/Robot Gif.gif" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Wall Detecting Robot</h4>
+                <p>Electronics, 3D Printing</p>
+                <div class="portfolio-links">
+                  <a href="robot-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Details"><i class="bx bx-search"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
 
       </div>
