--- a/robot-details.html
+++ b/robot-details.html
@@ -71,7 +71,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Electronics, 3D Printing</li>
-                <li><strong>Client</strong>: N/A</li>
+                <li><strong>Client</strong>: Electronics Laboratory</li>
                 <li><strong>Project date</strong>: 2023</li>
               </ul>
             </div>
@@ -79,7 +79,8 @@
               <h2>Wall Detecting Robot</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  TO DO:
+                  <b>1<sup>ST</sup> PLACE WINNER!</b> This analog robot was designed to detect walls and turn as it travels down a hallway. The goal of the competition was to 
+                  score and many points as possible from each turn and finish by shooting the back wall with a projectile.
                 </p>
               </div>
             </div>
