--- a/ouija-details.html
+++ b/ouija-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Wall Detecting Robot</title>
+  <title>Robotic Ouija Board</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -50,15 +50,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Robot WIP.jpg" class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Ouija Board Lettering.jpg" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Robot.jpg " class="img-fluid" alt="">
+                  <img src="assets/img/portfolio/Ouija Board Inside.jpg" class="img-fluid" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <video preload="auto" muted loop autoplay controls src="assets/img/portfolio/Robot Demo.mp4" class="img-fluid" type="video/mp4"></video>             
+                  <img src="assets/img/portfolio/Ouija Board WIP.jpg" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Ouija Board Top.jpg" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Ouija Board Gif.gif" class="img-fluid" alt="">
                 </div>
 
               </div>
@@ -70,17 +78,18 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Electronics, 3D Printing</li>
-                <li><strong>Client</strong>: Electronics Laboratory</li>
-                <li><strong>Project date</strong>: 2023</li>
+                <li><strong>Category</strong>: Electronics, 3D Printing, Programming</li>
+                <li><strong>Client</strong>: N/A</li>
+                <li><strong>Project date</strong>: 2022</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Wall Detecting Robot</h2>
+              <h2>Robotic Ouija Board</h2>
               <div style="height:250px; overflow:auto;">
                 <p class="indent">
-                  <b>1<sup>ST</sup> PLACE WINNER!</b> This analog robot was designed to detect walls and turn as it travels down a hallway. The goal of the competition was to 
-                  score as many points as possible from each turn and finish by shooting the back wall with a projectile.
+                  This steamer trunk is fitted with a custom gantry that uses electromagnets to drag the planchette across the surface. The setup
+                  uses custom software written in Java that allows the user to type messages on the connected computer and the ouija board will
+                  spell out the message. Electromagnets are fitted with temperature sensors to prevent overheating.
                 </p>
               </div>
             </div>
