--- a/NASS-details.html
+++ b/NASS-details.html
@@ -78,7 +78,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Electronics, 3D Printing</li>
+                <li><strong>Category</strong>: Electronics, 3D Printing, Programming</li>
                 <li><strong>Client</strong>: Digital Design Laboratory</li>
                 <li><strong>Project date</strong>: 2024</li>
               </ul>
