Added Robot Photos

--- a/robot-details.html
+++ b/robot-details.html
@@ -58,6 +58,14 @@
                 </div>
 
                 <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Robot Front.jpg" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Robot Launcher.jpg" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
                   <video preload="auto" muted loop autoplay controls src="assets/img/portfolio/Robot Demo.mp4" class="img-fluid" type="video/mp4"></video>             
                 </div>
 
