--- a/index.html
+++ b/index.html
@@ -128,34 +128,28 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h2>
            <p class="indent">       
-            I am a creative individual with a passion for learning, creating, and collaborating. I grew up in a small town in Kentucky and from a 
-            very young age I realized I liked to build gizmos and gadgets. The addiction started with making cities out of <i>Legos</i> and soon 
-            progressed to building walking machines, automatic light switches, and soda dispensers out of <i>K’nex</i>. Eventually, I graduated to 
-            disassembling and repurposing electronics and my bedroom began to resemble a junkyard.
+            I’m a creative engineer with a passion for building, learning, and problem-solving. Growing up in a small town in Kentucky, I was 
+            always drawn to creating—starting with <i>Lego</i> cities and evolving into building walking machines and gadgets with <i>K’nex</i>. 
+            Eventually, my curiosity led me to disassembling electronics, turning my room into a makeshift lab of innovation.
           </p>
            <p class="indent">
-            When I was in middle school, my father taught me to help rebuild classic cars and told me that if I wanted to have nice things when I 
-            got older, I should learn to build them myself. That stuck with me for a long time and to this day it is still something I draw 
-            inspiration from; frequently stopping to ask, “How can I build this myself?”. In high-school I discovered that I also had a strong 
-            passion for scientific research so when I began college, I had a hard time picking just one topic to study.
+            In middle school, I learned the art of rebuilding classic cars with my father, instilling in me the belief that if I wanted something, 
+            I could build it myself. This mindset continues to fuel my drive for exploration, always asking, "How can I create this?"
            </p>
            <p class="indent">
-            I began my studies focused on chemistry but mid-way through, I learned the overlap between chemistry and geology and made the leap to 
-            geochemistry. I mean what sciences are more encapsulating that learning how the entire planet works? A task I felt confident I could do. 
-            Upon receiving my bachelors degree, I proceeded to attend graduate school furthering my research into geochemistry and along the way 
-            got to see some of the most beautiful parts of the country (geologically speaking).
+            My academic journey took me through a variety of sciences. I began studying chemistry in college, transitioning to geochemistry as I 
+            became fascinated by how the Earth works on a molecular level. During my graduate studies, I had the opportunity to conduct research 
+            across some of the most beautiful geological landscapes in the country.
            </p>
            <p class="indent">
-            My first job out of graduate school was working in a research laboratory building experimental setups to study fluid-flow in oil and 
-            gas reservoirs. During my time constructing these high-pressure flow systems, I saw plenty of opportunities to teach myself something 
-            new. I learned to program using <i>Python</i> so that I could compile data faster. I learned to make automated pressure systems using 
-            <i>LabVIEW</i>. I begin learning more about circuitry and quickly realized that electricity and pressure behave in very similar ways.
+            After earning my degree, I worked in a research lab designing high-pressure flow systems that recreate the conditions of oil and gas 
+            reservoirs. It was there that I taught myself <i>Python</i> to automate data compilation and <i>LabVIEW</i> for pressure systems 
+            automation. This experience sparked my deeper interest in circuitry and programming, leading me to pursue computer engineering at 
+            the <i>University of Oklahoma</i>.
            </p>
            <p class="indent">
-            Eventually, I decided I wanted to follow my interests even further and enrolled in a computer engineering program at the 
-            <i>University of Oklahoma</i>. As I am working through my classes, my passion for electronics is growing each year. My hobbies have 
-            always been aligned with creating and learning and so too will be my career. My current interests are PCB design and embedded systems 
-            development but I am always going wherever my creativity takes me.
+            Today, my focus is on PCB design and embedded systems, but my passion for creating and learning never stops evolving. Whether it's through 
+            building experimental setups or exploring new technologies, I’m always pushing the boundaries of what I can create.
            </p>
             </h2>
           </div>
@@ -177,16 +171,16 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="bx bxs-plug"></i>
-              <span data-purecounter-start="0" data-purecounter-end="2500" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Wires Soldered</p>
+              <i class="bx bxs-flask"></i>
+              <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Scientific Article Published</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bx bxs-hourglass"></i>
-              <span data-purecounter-start="0" data-purecounter-end="215" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="227" data-purecounter-duration="1" class="purecounter"></span>
               <p>College Credit Hours</p>
             </div>
           </div>
@@ -194,7 +188,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bx bxs-hard-hat"></i>
-              <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="13" data-purecounter-duration="1" class="purecounter"></span>
               <p>Years of Scientific Work Experience</p>
             </div>
           </div>
@@ -213,6 +207,7 @@
     </section><!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
+     <!--
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -277,6 +272,7 @@
         </div>
 
       </div>
+    -->
     </section><!-- End Skills Section -->
     
     <!-- ======= Portfolio Section ======= -->
