--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
               <ul>
                 <li>Incorporated LabVIEW and Python programming, electronics, and manufacturing experience (including 3D printing/laser cutting) to build versatile data acquisition systems and laboratory software for regular use in the SCAL laboratory.</li>
                 <li>Individual responsibilities included designing and operating high pressure laboratory experiments such as: mercury injection capillary pressure, relative permeability, fluid sensitivity, electrical properties, low pressure gas adsorption, total gas content, and fracture conductivity.</li>
-                <li>Completed LabVIEW programs included software for CO2-Toluene Cleaner, SCAL Systems, Stress Dependent Acoustics, and Biot Measurements.</li>
+                <li>Completed LabVIEW programs included software for CO<sub>2</sub>-Toluene Cleaner, SCAL Systems, Stress Dependent Acoustics, and Biot Measurements.</li>
                 <li>Significant research contributions included developing a reliable method of determining porosity using cuttings.</li>
               </ul>
             </div>
