--- a/capstone-details.html
+++ b/capstone-details.html
@@ -54,6 +54,10 @@
                 </div>
 
                 <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Subsytem 3 Circuit.jpg" class="img-fluid" alt="">
+                </div>
+
+                <div class="swiper-slide">
                   <video preload="auto" muted loop autoplay controls src="assets/img/portfolio/Capstone Final Demo.mp4" class="img-fluid" type="video/mp4"></video>             
                 </div>
 
