--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Jordan Clay Bratcher</h1>
-      <p>I'm <span class="typed" data-typed-items="an Engineer, a Scientist, a Programmer, an Maker"></span></p>
+      <p>I'm <span class="typed" data-typed-items="an Engineer, a Scientist, a Programmer, a Maker"></span></p>
       <div class="social-links">
         <a href="https://www.instagram.com/the.rad.scientist/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/jordan-bratcher-4ba062a1/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
