--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-electronics filter-programming filter-laser_cutting filter-3d_printing">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Biochemistry Solution.gif" class="img-fluid object-fit-fill" alt="">
+            <img src="assets/img/portfolio/Biochemistry Solution.gif" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Biochemistry Puzzle</h4>
               <p>Electronics, Programming, Laser Cutting, 3D Printing</p>
