--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,14 @@
     </div>
   </footer><!-- End Footer -->
 
-  <div id="preloader"></div>
+ <!-- <div id="preloader"></div>-->
+  	
+  <div class="loader-container">
+    <div class="progress-bar">
+        <div class="progress" id="progress"></div>
+    </div>
+  </div>
+
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
