Take out Loading Bar temporarily

--- a/index.html
+++ b/index.html
@@ -935,15 +935,15 @@
     </div>
   </footer><!-- End Footer -->
 
-  <!-- <div id="preloader"></div> -->
-
+  <div id="preloader"></div>
+  <!--
   <div class='loader'>
     <div class='loader-container'>
       <div class='progress'>
         <div class='progress-bar progress-bar-color' id='bar' role='progressbar' style='width: 0%;'></div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
