--- a/mixtape-details.html
+++ b/mixtape-details.html
@@ -104,7 +104,13 @@
 
   </main><!-- End #main -->
 
-  <div id="preloader"></div>
+  <div class='loader'>
+    <div class='loader-container'>
+      <div class='progress'>
+        <div class='progress-bar progress-bar-color' id='bar' role='progressbar' style='width: 0%;'></div>
+      </div>
+    </div>
+  </div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
@@ -117,6 +123,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
